# template-workspace-vscode-python

./: README.md  extensions.list  pyproject.toml  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  dockerfile
.github/workflows/: pylint.yml
