[tool.poetry]
name = "github-vscode-template"
version = "0.1.0"
description = ""
authors = ["ManuelCorsetti <42147538+ManuelCorsetti@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
